--- a/logica-js-projeto_inicial/index3.html
+++ b/logica-js-projeto_inicial/index3.html
@@ -10,15 +10,15 @@
 <body>
 
     <div class="title">
-        <h1>Descubra o Número <br> Secreto</h1>
+        <h1>Jogo do Número <br> Secreto</h1>
     </div>
     
     <div class="content">
         
         <h2>Descubra o número de 1 a 10</h2>
         <input type="number" placeholder="Digite um número" id="numChute">
-        <button onclick="verifyNumber()">Enviar</button>
+        <button onclick="">Enviar</button>
     </div>
-    <script src="app2.js" defer></script>
+    <script src="app3.js" defer></script>
 </body>
 </html>
